--- a/day1/style.css
+++ b/day1/style.css
@@ -40,19 +40,26 @@ button{
     color: rgb(255, 255, 255);
     background:linear-gradient(90deg,#a21125,#e76633)
 }
-table{
-color: black;  
+ table {
+    color: black;
+    width: 1800px;
+    height: 500px;
+    border-collapse: collapse;
+    background: #fff;
+    font-size: 50px;
+    box-shadow: 0 4px 16px rgba(0,0,0,0.08);
+    border-radius: 16px;
+    overflow: hidden;
+    margin: auto;
+}
 
-   
- width: 80px;
-border-collapse: collapse;
-}
 thead {
-    background:linear-gradient(
-        90deg,rgb(111, 23, 23),rgb(46, 46, 135)
-    );
-  
+    background: linear-gradient(90deg, rgb(111, 23, 23), rgb(46, 46, 135));
+    color: #fff;
 }
-th,td{
-     border-bottom: black ;
-}
+
+th, td {
+    border-bottom: 1px solid #ccc;
+    padding: 18px 24px;
+    text-align: left;
+} 
